[workspace]

members = [
#    "l010k8",
    "l031c6_gcarrier",
    "mcu_helper",
    "power_helper"
]

[patch."https://github.com/vhrdtech/vhrdcan.git"]
vhrdcan = { path = "../vhrdcan" }

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations