[package]
name = "l031c6_gcarrier"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.5"
mcu_helper = { path = "../mcu_helper" }
power_helper = { path = "../power_helper" }
#panic_ramlog = { path = "../../panic_ramlog", features = ["minimal"] }
#alloc-cortex-m = "0.4.0"
#rtt-target = { version = "0.2.2" }
jlink_rtt = { git = "https://github.com/romixlab/jlink_rtt" }
mcp25625 = { path = "../../mcp25625" }
bq769x0 = { path = "../../bq769x0" }
heapless = "0.5"
hash32 = "0.1"
cfg-if = "1.0.0"
#tca9535 = { path = "../../tca9535-rs" }
vhrdcan = { path = "../../vhrdcan" }
btoi = { version = "0.4.2", default-features = false }
no-std-compat = "0.4.1"
uavcan = { path = "../../uavcan" }
uavcan_bridge = { path = "../../uavcan_bridge" }
postcard = "0.7.0"

[dependencies.serde]
version = "1.0.100"
features = ["derive"]
default-features = false

[dependencies.stm32l0xx-hal]
#git = "https://github.com/romixlab/stm32l0xx-hal.git"
path = "../../stm32l0xx-hal"
version = "0.6.2"
features = ["rt", "io-STM32L051", "stm32l0x1", "ufqfpn48"]

[dependencies.crc-any]
version = "2.3.5"
default-features = false

[dependencies.bitbang-hal]
version = "0.3.2"
optional = true

[features]
cli = []
bitbang-i2c = ["bitbang-hal"]
softoff = []
canbus-printstat = []
zvchg-fet-present = []
precharge-fet-present = []
bq769x0-with-crc = ["bq769x0/crc"]
bq769x0-alt-address = []