[package]
name = "l031c6_gcarrier"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.5"
mcu_helper = { path = "../mcu_helper" }
power_helper = { path = "../power_helper" }
#panic_ramlog = { path = "../../panic_ramlog", features = ["minimal"] }
#alloc-cortex-m = "0.4.0"
#rtt-target = { version = "0.2.2" }
jlink_rtt = { git = "https://github.com/romixlab/jlink_rtt" }
mcp25625 = { git = "https://github.com/romixlab/mcp25625.git", version = "0.1.0" }
bq769x0 = { git = "https://github.com/romixlab/bq769x0.git" }
heapless = "0.7.5"
hash32 = "0.1"
cfg-if = "1.0.0"
#tca9535 = { path = "../../tca9535-rs" }
vhrdcan = { git = "https://github.com/vhrdtech/vhrdcan.git", version = "0.1.0" }
btoi = { version = "0.4.2", default-features = false }
no-std-compat = "0.4.1"
uavcan = { git = "https://github.com/romixlab/uavcan.git" }
uavcan_bridge = { git = "https://github.com/romixlab/uavcan_bridge.git" }
postcard = "0.7.0"
embedded-time = "0.12.0"

[dependencies.serde]
version = "1.0.100"
features = ["derive"]
default-features = false

[dependencies.stm32l0xx-hal]
git = "https://github.com/romixlab/stm32l0xx-hal.git"
#path = "../../stm32l0xx-hal"
version = "0.6.2"
features = ["rt", "io-STM32L051", "stm32l0x1", "ufqfpn48", "eeprom-2048"]

[dependencies.crc-any]
version = "2.3.5"
default-features = false

[dependencies.bitbang-hal]
version = "0.3.2"
optional = true

[features]
cli = []
bitbang-i2c = ["bitbang-hal"]
canbus-printstat = []